# xero-welcome-desktop

./: .gitignore  LICENSE  PKGBUILD  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  xerowelcome-desktop.desktop
src/: main.jsx  style.css  xero-welcome-desktop
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/$HOME/.config/autostart/: xerowelcome-desktop.desktop
src-tauri/desktop/: xerowelcome-desktop.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: driver_command.rs  faq_command.rs  footer_command.rs  logger.rs  main.rs  post_command.rs  utils.rs  welcome_command.rs
src-tauri/src/scripts/: FOSS_drivers.sh  apply_defaults.sh  enable_wayland.sh  firewalled.sh  fix_vmware_res.sh  init_snapper.sh  install_apps_flatpak.sh  install_apps_other.sh  install_apps_pacman.sh  iso_builder.sh  nVidia_drivers.sh  oh_my_bash.sh  refresh_keys.sh  switch_to_lightdm.sh  switch_to_sddm.sh  switch_to_zsh.sh  update_system.sh
src/components/: AppsHeader.jsx  AppsList.jsx  Credits.jsx  DonateModal.jsx  DriverHeader.jsx  Embed.jsx  FaqHeader.jsx  FlatpakList.jsx  PostHeader.jsx  StartupSwitch.jsx  TabsPanel.jsx  WelcomeHeader.jsx  WelcomeLiveHeader.jsx
src/data/app_util/: flatpak.json  with-desc.json
src/screens/: applications.jsx  drivers.jsx  error-page.jsx  faq.jsx  post.jsx  welcome-live.jsx  welcome.jsx
