[package]
name = "xerowelcome-desktop"
version = "2.3.0"
description = "The new Xero Welcome app"
authors = ["Ed Rutherford <dedSyn4ps3>"]
license = "GPLv3"
repository = "https://github.com/xerolinux/xero-welcome-desktop"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
futures = "0.3.25"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-all", "os-all", "path-all", "shell-all"] }
tokio = {version = "1.24.2", features = ["full"] }
subprocess = "0.2.9"
pacmanconf = "2.0.0"
alpm = "2.2.1"
alpm-utils = "2.0.0"
dirs = "5.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
